# chess

./: .gitignore  DEVELOPER_SETUP.md  FRIENDSHIP_METER_COMPONENT.md  GETTING_STARTED.md  IPC_TESTING.md  PROFILE_PANEL_TEST_PLAN.md  PROJECT_STATUS.md  README.md  SESSION_SUMMARY.md  TASK_146_COMPLETION.md  TASK_147_COMPLETION.md  TASK_148_COMPLETION.md  TASK_149_COMPLETION.md  TASK_150_COMPLETION.md  TASK_151_COMPLETION.md  TASK_152_COMPLETION.md  TASK_153_COMPLETION.md  TASK_154_COMPLETION.md  TASK_155_COMPLETION.md  TASK_156_COMPLETION.md  TASK_157_COMPLETION.md  TASK_158_COMPLETION.md  TASK_159_COMPLETION.md  TASK_160_COMPLETION.md  TASK_161_COMPLETION.md  TASK_162_COMPLETION.md  TASK_163_COMPLETION.md  TASK_164_COMPLETION.md  TASK_165_COMPLETION.md  TASK_166_COMPLETION.md  TASK_178_COMPLETION.md  TODO.md  chatbot.txt  index.html  package.json  tailwind.config.js  tsconfig.main.json  vite.config.ts
backend/: .env.example  .gitignore  ACHIEVEMENTS_STORAGE.md  CONTEXT_BUILDER.md  CONVERSATION_TRACKING.md  DISLIKES_STORAGE.md  DRIFT_RATE_LIMITING.md  FAVORITES_STORAGE.md  FEATURE_UNLOCKS.md  FRIENDSHIP_PROGRESSION.md  GOALS_STORAGE.md  INSTALL.md  LEVEL_UP_EVENTS.md  MEMORY_EXTRACTION.md  MEMORY_SEARCH.md  PEOPLE_STORAGE.md  PERSONALITY_DRIFT.md  README.md  RELEVANCE_RANKING.md  SHARES_FACTS_QUIRK.md  SHORT_TERM_MEMORY.md  TASK_45_COMPLETION.md  TELLS_PUNS_QUIRK.md  TESTING.md  TRAIT_ADJUSTMENT.md  USES_EMOJIS_QUIRK.md  __init__.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_api.py  test_favorites_simple.py  test_llm.py  test_memory_extraction.py  (+4 more)
(+215 files in other folders)
